--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.6.1",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@react-three/drei": "^9.66.4",
     "@react-three/fiber": "^8.13.0",
+    "framer-motion": "^10.12.8",
     "install": "^0.13.0",
     "npm": "^9.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-three-fiber": "^6.0.13",
     "stl-loader": "^1.0.0",
     "three": "^0.152.2"
